--- a/RobotPointPicker/css/main.css
+++ b/RobotPointPicker/css/main.css
@@ -7,100 +7,185 @@
  * Kroc Camen, and the H5BP dev community and team.
  */
 
-* { margin: 0; padding: 0; border: none; }
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
 
 :root {
-  --transparent-white: rgba(200,200,200,.11);
-  --more-transparent-white: rgba(200,200,200,.05);
+    --transparent-white: rgba(200, 200, 200, .11);
+    --more-transparent-white: rgba(200, 200, 200, .05);
 }
 
 @font-face {
-  font-family: 'Space Grotesk';
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/spacegrotesk/v13/V8mQoQDjQSkFtoMM3T6r8E7mF71Q-gOoraIAEj7oUXskPMA.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    font-family: 'Space Grotesk';
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://fonts.gstatic.com/s/spacegrotesk/v13/V8mQoQDjQSkFtoMM3T6r8E7mF71Q-gOoraIAEj7oUXskPMA.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 /*noinspection CssReplaceWithShorthandSafely*/
 html {
-  color: #b3d4fc;
-  font-size: 1em;
-  line-height: 1.4;
-  background: #222222;
-  background-size: 40px 40px;
-  background-image:
-          linear-gradient(to right, var(--transparent-white) 1px, transparent 1px),
-          linear-gradient(to bottom, var(--transparent-white) 1px, transparent 1px);
-  font-family: 'Space Grotesk', serif;
-  overflow-y: clip;
+    color: #b3d4fc;
+    font-size: 1em;
+    line-height: 1.4;
+    background: #222222;
+    background-size: 40px 40px;
+    background-image: linear-gradient(to right, var(--transparent-white) 1px, transparent 1px),
+                      linear-gradient(to bottom, var(--transparent-white) 1px, transparent 1px);
+    font-family: 'Space Grotesk', serif;
+    overflow-y: clip;
 }
 
 .offset-grid {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-size: 20px 20px;
-  background-image:
-          linear-gradient(to right, var(--more-transparent-white) 1px, transparent 1px),
-          linear-gradient(to bottom, var(--more-transparent-white) 1px, transparent 1px);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: 20px 20px;
+    background-image: linear-gradient(to right, var(--more-transparent-white) 1px, transparent 1px),
+                      linear-gradient(to bottom, var(--more-transparent-white) 1px, transparent 1px);
 }
 
 .gradient-border {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-image:
-          linear-gradient(to right, #222222EE, transparent 15vw, transparent 88vw, #222222EE),
-          linear-gradient(to bottom, #22222288, transparent 5vh, transparent 95vh, #22222288);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to right, #222222EE, transparent 15vw, transparent 88vw, #222222EE),
+                      linear-gradient(to bottom, #22222288, transparent 5vh, transparent 95vh, #22222288);
 }
 
-.settings-container {
-  position: absolute;
-  height: 100%;
-  display: flex;
-  padding: 5vmin;
-  flex-flow: column wrap;
+.side-container {
+    position: absolute;
+    height: 96%;
+    transform: translate(-2%, -2%);
+    top: 0;
+    display: flex;
+    padding: 2%;
+    flex-flow: column wrap;
+    justify-content: space-between;
 }
 
 .setting {
-  display: flex;
-  flex-flow: row nowrap;
-  gap: 6px;
+    display: flex;
+    flex-flow: row nowrap;
+    color: #51ad6a;
+    font-size: 1.2em;
+}
+
+.setting:hover {
+    transform: scale(1.05);
+}
+
+.setting-desc {
+    color: #b3d4fc;
 }
 
 .setting-desc::after {
-  content: " =";
+    white-space: pre;
+    content: " = ";
+}
+
+input[type="text"] {
+    background-color: transparent;
+    color: #51ad6a;
+    font-size: 2em;
+    font-weight: 600;
+    height: 100%;
+    outline: none;
+    min-width: 1ch;
+    transition: width 0.3s cubic-bezier(0,.35,.58,1.88);
+}
+
+.setting-underline {
+    position: relative;
+    width: 0;
+    height: 2px;
+    top: -25px;
+    right: 3px;
+    background: #51ad6a;
+    transition: width .1s ease-in-out;
+}
+
+input[type="text"]:focus ~ .setting-underline,
+.setting-value:hover > .setting-underline {
+    width: calc(100% + 6px);
+    transform: scale(1.1);
+}
+
+#reset {
+    background-color: #b3d4fc;
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    font-size: 2.8em;
+    color: #222222;
+}
+
+#reset:hover {
+    background-color: #51ad6a;
+    filter: drop-shadow(0px 0px 23px rgba(210, 232, 234, 0.43));
+    transform: scale(1.1);
+    color: #dadada;
+}
+
+.field-container {
+    position: relative;
+    height: 85vmin;
+    width: 85vmin;
+    top: 7.5vmin;
+    margin: 0 auto;
+    display: flex;
+    background-color: #626262;
+    box-shadow: 0 0 50px 3px rgba(210, 232, 234, 0.43);
+}
+
+.field-img-container {
+    display: flex;
+    overflow: hidden;
 }
 
 #field-img {
-  position: absolute;
-  height: 85vmin;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  filter: drop-shadow(0px 0px 23px rgba(210, 232, 234, 0.43));
+    position: relative;
+    transform: scale(1);
 }
 
 #robit {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  width: calc(1.235 * (85vmin / 6));
-  filter: drop-shadow(0px 0px 16px rgba(210, 232, 234, 0.33));
-  cursor: grab;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: calc(.859 * (85vmin / 6));
+    filter: drop-shadow(0px 0px 16px rgba(210, 232, 234, 0.33));
+    cursor: grab;
 }
 
 #sizing-square {
-  position: absolute;
-  top: 8%;
-  left: 90%;
-  background: #b3d4fc;
-  height: calc(15.1969 * (85vmin / 144));
-  width: calc(15.68314961 * (85vmin / 144));
-  filter: drop-shadow(0px 0px 16px rgba(210, 232, 234, 0.33));
-  cursor: grab;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #b3d4fc;
+    height: calc(15.1969 * (85vmin / 144));
+    width: calc(15.68314961 * (85vmin / 144));
+    filter: drop-shadow(0px 0px 16px rgba(210, 232, 234, 0.33));
+    cursor: grab;
+}
+
+#sizing-square:hover {
+    background-color: #51ad6a;
+}
+
+.input-element {
+    font-size: 2.45em;
+    font-weight: 600;
+}
+
+.tmp-element {
+    position: absolute;
+    visibility: hidden;
+    white-space: pre;
 }
 
 /*
@@ -114,13 +199,13 @@ html {
  */
 
 ::-moz-selection {
-  background: #b3d4fc;
-  text-shadow: none;
+    background: #b3d4fc;
+    text-shadow: none;
 }
 
 ::selection {
-  background: #b3d4fc;
-  text-shadow: none;
+    background: #b3d4fc;
+    text-shadow: none;
 }
 
 /*
@@ -128,12 +213,12 @@ html {
  */
 
 hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #ccc;
-  margin: 1em 0;
-  padding: 0;
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
 }
 
 /*
@@ -148,7 +233,7 @@ iframe,
 img,
 svg,
 video {
-  vertical-align: middle;
+    vertical-align: middle;
 }
 
 /*
@@ -156,9 +241,9 @@ video {
  */
 
 fieldset {
-  border: 0;
-  margin: 0;
-  padding: 0;
+    border: 0;
+    margin: 0;
+    padding: 0;
 }
 
 /*
@@ -166,7 +251,7 @@ fieldset {
  */
 
 textarea {
-  resize: vertical;
+    resize: vertical;
 }
 
 /* ==========================================================================
@@ -183,7 +268,7 @@ textarea {
 
 .hidden,
 [hidden] {
-  display: none !important;
+    display: none !important;
 }
 
 /*
@@ -196,16 +281,16 @@ textarea {
  */
 
 .sr-only {
-  border: 0;
-  clip: rect(0, 0, 0, 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  /* 1 */
+    border: 0;
+    clip: rect(0, 0, 0, 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    /* 1 */
 }
 
 /*
@@ -216,13 +301,13 @@ textarea {
 
 .sr-only.focusable:active,
 .sr-only.focusable:focus {
-  clip: auto;
-  height: auto;
-  margin: 0;
-  overflow: visible;
-  position: static;
-  white-space: inherit;
-  width: auto;
+    clip: auto;
+    height: auto;
+    margin: 0;
+    overflow: visible;
+    position: static;
+    white-space: inherit;
+    width: auto;
 }
 
 /*
@@ -230,7 +315,7 @@ textarea {
  */
 
 .invisible {
-  visibility: hidden;
+    visibility: hidden;
 }
 
 /*
@@ -247,12 +332,12 @@ textarea {
 
 .clearfix::before,
 .clearfix::after {
-  content: " ";
-  display: table;
+    content: " ";
+    display: table;
 }
 
 .clearfix::after {
-  clear: both;
+    clear: both;
 }
 
 /* ==========================================================================
@@ -262,14 +347,14 @@ textarea {
    ========================================================================== */
 
 @media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+    /* Style adjustments for viewports that meet the condition */
 }
 
 @media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
+    /* Style adjustments for high resolution devices */
 }
 
 /* ==========================================================================
@@ -279,70 +364,70 @@ textarea {
    ========================================================================== */
 
 @media print {
-  *,
-  *::before,
-  *::after {
-    background: #fff !important;
-    color: #000 !important;
-    /* Black prints faster */
-    box-shadow: none !important;
-    text-shadow: none !important;
-  }
+    *,
+    *::before,
+    *::after {
+        background: #fff !important;
+        color: #000 !important;
+        /* Black prints faster */
+        box-shadow: none !important;
+        text-shadow: none !important;
+    }
 
-  a,
-  a:visited {
-    text-decoration: underline;
-  }
+    a,
+    a:visited {
+        text-decoration: underline;
+    }
 
-  a[href]::after {
-    content: " (" attr(href) ")";
-  }
+    a[href]::after {
+        content: " (" attr(href) ")";
+    }
 
-  abbr[title]::after {
-    content: " (" attr(title) ")";
-  }
+    abbr[title]::after {
+        content: " (" attr(title) ")";
+    }
 
-  /*
-   * Don't show links that are fragment identifiers,
-   * or use the `javascript:` pseudo protocol
-   */
-  a[href^="#"]::after,
-  a[href^="javascript:"]::after {
-    content: "";
-  }
+    /*
+     * Don't show links that are fragment identifiers,
+     * or use the `javascript:` pseudo protocol
+     */
+    a[href^="#"]::after,
+    a[href^="javascript:"]::after {
+        content: "";
+    }
 
-  pre {
-    white-space: pre-wrap !important;
-  }
+    pre {
+        white-space: pre-wrap !important;
+    }
 
-  pre,
-  blockquote {
-    border: 1px solid #999;
-    page-break-inside: avoid;
-  }
+    pre,
+    blockquote {
+        border: 1px solid #999;
+        page-break-inside: avoid;
+    }
 
-  /*
-   * Printing Tables:
-   * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
-   */
-  thead {
-    display: table-header-group;
-  }
+    /*
+     * Printing Tables:
+     * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
+     */
+    thead {
+        display: table-header-group;
+    }
 
-  tr,
-  img {
-    page-break-inside: avoid;
-  }
+    tr,
+    img {
+        page-break-inside: avoid;
+    }
 
-  p,
-  h2,
-  h3 {
-    orphans: 3;
-    widows: 3;
-  }
+    p,
+    h2,
+    h3 {
+        orphans: 3;
+        widows: 3;
+    }
 
-  h2,
-  h3 {
-    page-break-after: avoid;
-  }
+    h2,
+    h3 {
+        page-break-after: avoid;
+    }
 }
